# Graph-Tree-Generator-for-LLMs

./: .gitignore  README.md  main.py  mcp_server.py  pyproject.toml  scan.py
.claude/: settings.local.json
graph_tree_generator/: registry.py  scan.py
graph_tree_generator/config/: config.json
graph_tree_generator/db/: embeddings.py  loader.py  schema.py
graph_tree_generator/ddl/: __init__.py  config.py  constraints.py  graph_builder.py  parser.py  runner.py  views.py
graph_tree_generator/jsts/: config.py  graph_builder.py  labeler.py  parser.py  resolver.py  runner.py  scanner.py
graph_tree_generator/jsts/visitors/: calls.py  classes.py  exports.py  functions.py  imports.py  types.py
graph_tree_generator/python/: config.py  graph_builder.py  labeler.py  parser.py  resolver.py  runner.py
graph_tree_generator/python/visitors/: calls.py  classes.py  functions.py  imports.py
