[project]
name = "projects-graph-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "blessed>=1.38.0",
    "click>=8.3.2",
    "mcp>=1.27.0",
    "python-dotenv>=1.2.2",
    "sqlglot>=30.2.1",
    "sqlite-vec>=0.1.9",
    "tree-sitter>=0.25.2",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-python>=0.25.0",
    "tree-sitter-typescript>=0.23.2",
]
